# tamara

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  tamara.code-workspace
.github/workflows/: test.yml
backend/: .gitignore  pyproject.toml
backend/src/: async_task.py  async_task_interface.py  connection_manager.py  main.py  main_tk.py  websocket_task.py
backend/src/api/: api.py  connection_manager.py
backend/src/tasks/: async_task_interface.py  websocket_task.py
backend/tests/: test_main.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: api.service.ts  app.component.html  app.component.spec.ts  app.component.ts
frontend/src/app/async-task/: async-task.component.html  async-task.component.spec.ts  async-task.component.ts
