[project]
name = "tamara-backend"
version = "0.1.0"
description = "Backend running pymodbus for the tamara modbus frontend."
authors = [{ name = "yawn west", email = "yawn.west@posteo.eu" }]
license = { text = "MIT" }
readme = "../README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
backend = "src.main:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"
